# ragas-evaluation

./: .gitignore  README.md  pyproject.toml
app/: app.py
ragas_eval/: evaluator.py  indexer.py  rag_pipelines.py  synthetic.py
